--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,8 @@
 {% extends "base.html" %}
 
+
+{% block title %}Welcome to YouTalkEdu{% endblock title %}
+
 {% block content %}
 	{{ block.super }}
 	<h1>Welcome</h1>
