--- a/templates/login.html
+++ b/templates/login.html
@@ -28,7 +28,7 @@
 				<label for="id_pass_login">Password:</label> 
 				<input type="password" name="password" id="id_pass_login"/><br/>
 				<button type="submit" name="login">Login</button>
-				<label><input type="checkbox" name="remember_me"/>Remember me</label>
+				<label><input type="checkbox" name="remember_me"/>&nbsp;Remember me</label>
 				<a href="/accounts/register">Create Account</a>
 				<a href="{% url 'password_reset' %}">Reset password</a>
 				{% if next and next.strip %}
