Tests pass, minor template styling

--- a/templates/user_page.html
+++ b/templates/user_page.html
@@ -11,7 +11,7 @@
 		<p><a href="{% url 'user_type_change' %}">Change your account type</a></p>
 	{% endif %}
 	<h4> Overall user rating: {{ user_object.vote_percentage }}</h4>
-	<p>Last logged in on {{ user.last_login.date }} at {{ user.last_login.time }}</p>
+	<p>Last logged in on {{ user_object.last_login.date }} at {{ user_object.last_login.time }}</p>
 
 	<br/>
 	{% if user_object == request.user %}
