--- a/templates/base.html
+++ b/templates/base.html
@@ -4,7 +4,8 @@
 	{% block stylesheets %}
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"  media="screen">
-		<link href="{% static 'css/bootstrap-responsive.min.css' %}" rel="stylesheet" media="screen"> 			{% endblock stylesheets %}
+		<link href="{% static 'css/bootstrap-responsive.min.css' %}" rel="stylesheet" media="screen"> 
+	{% endblock stylesheets %}
 	<title>
 		{% block title %}YouTalkEdu{% endblock title %}
 	</title>
@@ -27,9 +28,9 @@
             	        <ul class="nav pull-right">
 				{% if user.is_authenticated %}
 					<li><a href="{% url 'user_page' user=user %}">{{ user.username }}</a></li>
-					<li><a href="{% url 'auth_logout' %}">Logout</a></li>
+					<li><a name="logout_nav" href="{% url 'auth_logout' %}">Logout</a></li>
 				{% else %}
-					<li class="pull-right"><a href="{% url 'login' %}">Login</a></li>
+					<li class="pull-right"><a name="login_nav" href="{% url 'login' %}">Login</a></li>
 				{% endif %}
 			</ul>
 		</div>
