--- a/templates/login.html
+++ b/templates/login.html
@@ -29,7 +29,7 @@
 				<input type="password" name="password" id="id_pass_login"/><br/>
 				<button type="submit" name="login">Login</button>
 				<label><input type="checkbox" name="remember_me"/>&nbsp;Remember me</label>
-				<a href="/accounts/register">Create Account</a>
+				<a href="/accounts/register">Create account</a>
 				<a href="{% url 'password_reset' %}">Reset password</a>
 				{% if next and next.strip %}
 					{# Next value is provided, redirect back to that page #}
