README updated, cerulean theme added

--- a/templates/base_post.html
+++ b/templates/base_post.html
@@ -51,7 +51,7 @@
 
 	{# Sort by links #}
 	<div class="btn-group">
-		<a class="btn dropdown-toggle" data-toggle="dropdown" href="#">
+		<a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#">
 			Sort by:
 			<span class="caret"></span>
 		</a>
