--- a/templates/base.html
+++ b/templates/base.html
@@ -3,8 +3,8 @@
 <head>
 	{% block stylesheets %}
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet"  media="screen">
-		<link href="{% static 'css/bootstrap-responsive.min.css' %}" rel="stylesheet" media="screen"> 
+		<link href="{% static 'css/cerbootstrap.min.css' %}" rel="stylesheet"  media="screen">
+{#		<link href="{% static 'css/bootstrap-responsive.min.css' %}" rel="stylesheet" media="screen"> #}
 	{% endblock stylesheets %}
 	<title>
 		{% block title %}YouTalkEdu{% endblock title %}
