Case insensitive test added, FAQ page added, vote perc added to user admin

--- a/templates/registration/activation_complete.html
+++ b/templates/registration/activation_complete.html
@@ -5,5 +5,5 @@
 
 {% block content %}
 	{{ block.super }}
-	<p>Your account is now active! Feel free to explore the site with your new-found powers!</p>
+	<p>Your account is now active! Feel free to log in and explore the site with your new-found powers!</p>
 {% endblock content %}
