--- a/templates/home.html
+++ b/templates/home.html
@@ -3,6 +3,17 @@
 {% block title %}Welcome to YouTalkEdu{% endblock title %}
 
 {% block content %}
+
+	<div class="hero-unit">
+		<h1>Welcome to YouTalkEdu</h1>
+		<p>An outlet for debate and discussion of American education and schools</p>
+		<p>
+			<a class="btn btn-primary btn-large">
+				Learn more
+			</a>
+		</p>
+	</div>
+
 	<h1>Welcome</h1>
 
 	<a href="{% url 'faq' %}">FAQ</a>
