--- a/templates/registration/activation_complete.html
+++ b/templates/registration/activation_complete.html
@@ -5,5 +5,7 @@
 
 {% block content %}
 	{{ block.super }}
-	<p>Your account is now active! Feel free to log in and explore the site with your new-found powers!</p>
+	<div class="alert alert-success">
+		<p>Your account is now active! Feel free to log in and explore the site with your new-found powers!</p>
+	</div>
 {% endblock content %}
