more FAQ added, tried to fix Disqus but to no avail

--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -10,10 +10,10 @@
 		<li><a href="#1">My overall user rating is incorrect</a></li>
 		<li><a href="#2">My post has disappeared!</a></li>
 		<li><a href="#3">I can't log in!</a></li>
-		<li><a href="#4"></a></li>
+		<li><a href="#4">Can I donate?</a></li>
 	</ul>
 
-	<br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/><br/>
+	<br/><br/><br/><br/><br/>
 	<ul>
 		<h4><a id="1">My overall user rating is incorrect</a></h4>
 		<p>
@@ -59,9 +59,15 @@
 					stealing your password and posting as you. Email me {# EMAIL #} if you would
 					like your account back, but PROMISE me you will choose a stronger password.
 				</p>
-		</ol>
+		</ol><br/>
 
-		<h4><a id="4"></a></h4>
+		<h4><a id="4">Can I donate?</a></h4>
+		<p>
+			Of course, but I would suggest against it. The purpose of this site is to stimulate discussion
+			about US education, so naturally your time and resources would be better spent on making 
+			education better in this country.
+		</p>
+		<p>If, for whatever reason, you still feel inclined to donate, you may do so by clicking here {# DONATE #}.
 
 	</ul>
 {% endblock content %}
