Added django-axes to limit number of logins. Added to FAQ

--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -11,6 +11,7 @@
 		<li><a href="#2">My post has disappeared!</a></li>
 		<li><a href="#3">I can't log in!</a></li>
 		<li><a href="#4">Can I donate?</a></li>
+		<li><a href="#5">I'm locked out of my account!</a></li>
 	</ul>
 
 	<br/><br/><br/><br/><br/>
@@ -67,7 +68,13 @@
 			about US education, so naturally your time and resources would be better spent on making 
 			education better in this country.
 		</p>
-		<p>If, for whatever reason, you still feel inclined to donate, you may do so by clicking here {# DONATE #}.
+		<p>If, for whatever reason, you still feel inclined to donate, you may do so by clicking here {# DONATE #}.</p><br/>
+		
+		<h4><a id="5">I'm locked out of my account!</a></h4>
+		<p>
+			Sorry! For security reasons, the number of logins you can attempt before being locked out of 
+			your account is limited. Please email me {# EMAIL #} and I will unlock your account.		
+		</p>	
 
 	</ul>
 {% endblock content %}
