Password min length added, README and FAQ updated

--- a/templates/FAQ.html
+++ b/templates/FAQ.html
@@ -8,13 +8,14 @@
 
 	<ul>
 		<li><a href="#1">My overall user rating is incorrect</a></li>
-		<li><a href="#2">My post has disappeared!</a></li>
-		<li><a href="#3">I can't log in!</a></li>
-		<li><a href="#4">Can I donate?</a></li>
-		<li><a href="#5">I'm locked out of my account!</a></li>
+		<li><a href="#2">My post has disappeared</a></li>
+		<li><a href="#3">I can't log in</a></li>
+		<li><a href="#4">Can I donate to you?</a></li>
+		<li><a href="#5">I'm locked out of my account</a></li>
+		<li><a href="#6">My question is not listed</a></li>
 	</ul>
 
-	<br/><br/><br/><br/><br/>
+	<br/><br/>
 	<ul>
 		<h4><a id="1">My overall user rating is incorrect</a></h4>
 		<p>
@@ -27,7 +28,7 @@
 			If you believe your user rating has been inaccurately calculated, please email me. {# EMAIL #}
 		</p><br/>
 
-		<h4><a id="2">My post has disappeared!</a></h4>
+		<h4><a id="2">My post has disappeared</a></h4>
 		<p>
 			Sometimes the website gets hungry and has to eat posts to stay alive. Rest assured, your post 
 			was probably very delicious...
@@ -38,7 +39,7 @@
 			You may still access your post by going to your user page and clicking on the post.
 		</p><br/>
 
-		<h4><a id="3">I can't log in!</a></h4>
+		<h4><a id="3">I can't log in</a></h4>
 		<p>There are a couple of possibilities:</p>
 		<ol>
 			<li>The incorrect password is being entered.</li>
@@ -57,12 +58,12 @@
 				<p>
 					If you are sure you are entering in the correct username and password,
 					your account is likely banned. This is probably the result of someone
-					stealing your password and posting as you. Email me {# EMAIL #} if you would
-					like your account back, but PROMISE me you will choose a stronger password.
+					stealing your password and posting as you. Depending on my mood, I may return 
+					your account to you. Press your luck by emailing me here {# EMAIL #}.
 				</p>
 		</ol><br/>
 
-		<h4><a id="4">Can I donate?</a></h4>
+		<h4><a id="4">Can I donate to you?</a></h4>
 		<p>
 			Of course, but I would suggest against it. The purpose of this site is to stimulate discussion
 			about US education, so naturally your time and resources would be better spent on making 
@@ -70,11 +71,16 @@
 		</p>
 		<p>If, for whatever reason, you still feel inclined to donate, you may do so by clicking here {# DONATE #}.</p><br/>
 		
-		<h4><a id="5">I'm locked out of my account!</a></h4>
+		<h4><a id="5">I'm locked out of my account</a></h4>
 		<p>
 			Sorry! For security reasons, the number of logins you can attempt before being locked out of 
 			your account is limited. Please email me {# EMAIL #} and I will unlock your account.		
-		</p>	
+		</p><br/>
+
+		<h4><a id="6">My question is not listed</a></h4>
+		<p>
+			Email me your question here {# EMAIL #}. I will do my best to address it as quickly as I can.
+		</p>
 
 	</ul>
 {% endblock content %}
