--- a/templates/home.html
+++ b/templates/home.html
@@ -5,8 +5,11 @@
 {% block content %}
 
 	<div class="hero-unit">
-		<h1>Welcome to YouTalkEdu</h1>
-		<p>An outlet for debate and discussion of American education and schools</p>
+		<h1>It's time to talk education</h1>
+		<p>
+			Whether you're a student, teacher, school administrator, parent, or just someone interested 
+			in education, we need YOU.	
+		</p>
 		<p>
 			<a class="btn btn-primary btn-large">
 				Learn more
@@ -14,7 +17,5 @@
 		</p>
 	</div>
 
-	<h1>Welcome</h1>
-
-	<a href="{% url 'faq' %}">FAQ</a>
+	<p>Questions? Check out the <a href="{% url 'faq' %}">FAQ</a></p>
 {% endblock content %}
