Errors on registration prettier (test), unneeded block.supers removed

--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -3,5 +3,7 @@
 {% block title %}Password change success - YouTalkEdu{% endblock title %}
 
 {% block content %}
-	<p>Your password has been successfully changed.</p>
+	<div class="alert alert-success">
+		<p>Your password has been successfully changed.</p>
+	</div>
 {% endblock content %}
