--- a/templates/user_type_change_done.html
+++ b/templates/user_type_change_done.html
@@ -3,5 +3,7 @@
 {% block title %}Change user type success - YouTalkEdu{% endblock title %}
 
 {% block content %}
-	<p>Your user type has been successfully changed.</p>
+	<div class="alert alert-success">
+		<p>Your user type has been successfully changed.</p>
+	</div>
 {% endblock content %}
