--- a/templates/user_type_change_form.html
+++ b/templates/user_type_change_form.html
@@ -3,14 +3,13 @@
 {% block title %}Change user type - YouTalkEdu{% endblock title %}
 
 {% block content %}
-	{{ block.super }}
 	<form method="POST" action="{% url 'user_type_change_done' id=request.user.id %}">
 		{% csrf_token %}
 		<br/>
 		<table>
 			<tr>
 				<td><label for="id_user_type">User type:</label></td>
-				<td>{{ form.user_type }}</td>
+				<td>&nbsp;{{ form.user_type }}</td>
 			</tr>
 			<tr>
 				<td></td>
