Added focus to templates that accept inputs

--- a/templates/base_post.html
+++ b/templates/base_post.html
@@ -42,6 +42,7 @@
     					$('#id_post_form').hide();			
   	 				$('#id_show_form').click(function() {
     						$('#id_post_form').show();
+						$('#id_title').focus();
     						$('#id_show_form').hide();
     						$('#id_line_break').hide();
     						});
