--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -3,6 +3,14 @@
 {% block title %}Password change - YouTalkEdu{% endblock title %}
 
 {% block content %}
+	<script type="text/javascript">
+		$(document).ready(function() {
+			window.onload = function() {
+				$("#id_old_password").focus();
+			};  
+		}); 
+        </script> 
+
 	<form action="" method="post">
 		{% csrf_token %}
 		<table>
