--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -5,6 +5,14 @@
 {% block title %}Reset Password - YouTalkEdu{% endblock title %}
 
 {% block content %}
+	<script type="text/javascript">
+		$(document).ready(function() {
+			window.onload = function() {
+				$("#id_email").focus();
+			};  
+		}); 
+        </script> 
+
 	<p>Please enter your email address below to receive instructions for resetting your password.</p>
 
 	<form action="" method="post">
