--- a/templates/search/search.html
+++ b/templates/search/search.html
@@ -3,6 +3,15 @@
 {% block title %}Search - YouTalkEdu{% endblock title %}
 
 {% block content %}
+	{# Focus on search on load #}
+	<script type="text/javascript">
+		$(document).ready(function() {
+			window.onload = function() {
+				$("#id_q").focus();
+			};  
+		}); 
+        </script> 
+
     <form method="get" action=".">
         <table>
             {{ form.as_table }}
