--- a/templates/base_post.html
+++ b/templates/base_post.html
@@ -129,15 +129,16 @@
 			</p>
 			{% if user.is_authenticated %}		
 				<p>
+					{{ request.path }}
 					<div style="display:inline-block">					
-					<a href="{% url 'up_vote' id=post.id %}?next={{request.path}}">Up</a> &nbsp;
-					<a href="{% url 'down_vote' id=post.id %}?next={{request.path}}">Down</a> &nbsp;
-					<a href="{% url 'mark_as_spam' id=post.id %}?next={{request.path}}">Mark as spam</a>
+					<a href="{% url 'up_vote' id=post.id %}?next={{request.path}}?page={{ page }}">Up</a> &nbsp;
+					<a href="{% url 'down_vote' id=post.id %}?next={{request.path}}?page={{ page }}">Down</a> &nbsp;
+					<a href="{% url 'mark_as_spam' id=post.id %}?next={{request.path}}?page={{ page }}">Mark as spam</a>
 					</div>			
 				{% if post.user_id == request.user %}
 					<div style="float:right; display:inline-block">
 					<a href="{% url 'post_edit' id=post.id %}?next={{request.path}}">Edit</a>
-					<a href="{% url 'post_delete' id=post.id %}?next={{request.path}}"
+					<a href="{% url 'post_delete' id=post.id %}?next={{request.path}}?page={{ page }}"
 					onclick="return confirm('Deleting your post will remove all related votes and comments. Proceed?')">Delete</a>
 					</div>
 				{% endif %}
